--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,12 +7,21 @@ on:
       - main
 
 jobs:
-  run-actions:
+  say-hello:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        action: [my-js-action, my-composite-action, my-docker-action]
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Run action ${{ matrix.action }}
-        uses: ./${{ matrix.action }}
+      - name: Checkout repo
+        uses: actions/checkout@v4  
+      
+      - name: Print a welcome message
+        run: echo "Hello from GitHub Actions 🚀"
+
+      - name: Run JavaScript Action
+        uses: ./my-js-action
+
+      - name: Run Composite Action
+        uses: ./my-composite-action
+
+      - name: Run Docker Action
+        uses: ./my-docker-action
