--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -1,26 +1,32 @@
-name: matrix.yaml
+name: Matrix Build
 
 on:
   push:
     branches:  
       - main  
+
 jobs:  
-  build:  
+  build:
     strategy:
       matrix:
-        os:[ubuntu-22.04,ubuntu-20.04]
-        node:[18,20]
-      runs-on: ${{ matrix.os }}
-      steps:
-        - name: Checkout Repo
-          uses: actions/checkout@v4
-        - name: steup node
-          uses: actions/setup-node@v4
-          with :
-            node-version: ${{ matrix.node }}  
-        - name: Install Dependencies
-          run: npm install
-        - name: build
-          run: npm run build
-        - name: deploy
-          run: npm run deploy
+        os: [ubuntu-22.04, ubuntu-20.04]
+        node: [18, 20]
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy
+        run: npm run deploy
