--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "actions-learning",
+  "version": "1.0.0",
+  "description": "My GitHub Actions test project",
+  "main": "index.js",
+  "scripts": {
+    "build": "echo \"Building...\"",
+    "deploy": "echo \"Deploying...\""
+  },
+  "author": "Your Name",
+  "license": "MIT"
+}
