--- a/.github/workflows/publishingtoGCR.yaml
+++ b/.github/workflows/publishingtoGCR.yaml
@@ -25,5 +25,8 @@ jobs:
       - name: Build and Push the image
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/hello:latest
-          docker build . --tag $IMAGE_NAME
+          docker build -f my-docker-action/Dockerfile my-docker-action --tag $IMAGE_NAME
           docker push $IMAGE_NAME
+
+
+
