--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,20 @@
 name: Release workflow
-on: [push]
+
+on:
+  push:
+    branches:
+      - main  
 
 jobs:
   builds:
     runs-on: ubuntu-latest
     permissions:
-      contents:write
+      contents: write
+
     steps:
-      - name: checkout code
-        uses:actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Create Release
         uses: actions/create-release@v1
         env:
