--- a/.github/workflows/GHCR-publish-workflow.yaml
+++ b/.github/workflows/GHCR-publish-workflow.yaml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build . -t ghcr.io/${{ github.repository_owner }}/hello:latest
+          docker build my-docker-action -t ghcr.io/${{ github.repository_owner }}/hello:latest
           docker push ghcr.io/${{ github.repository_owner }}/hello:latest
