--- a/.github/workflows/defaultvar.yml
+++ b/.github/workflows/defaultvar.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Display Default Variable
         run: |
-          echo 'Repository: $GITHUB_REPOSITORY'
-          echo 'Action: $GITHUB_ACTIOR"
-          echo 'SHA: $GITHUB_SHA'
-          echo 'Event Name: $GITHUB_EVENT_NAME'
+          echo "Repository: $GITHUB_REPOSITORY"
+          echo "Actor: $GITHUB_ACTOR"
+          echo "SHA: $GITHUB_SHA"
+          echo "Event Name: $GITHUB_EVENT_NAME"
