--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        run: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Display API KEY
         run: echo "API_KEY is ${{ secrets.API_KEY }}"
