--- a/.github/workflows/Self-HostedRunner.yaml
+++ b/.github/workflows/Self-HostedRunner.yaml
@@ -2,7 +2,7 @@ name: Self-hosted runner
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
   pull_request:
     branches: [ main, develop ]
 
